translate MkDocs navigation content on Transifex

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,15 +8,13 @@ on:
       - '.github/workflows/doc.yml'
   push:
     branches:
+      - docx # TODO: remove
       - master
     paths:
       - 'docs/**'
       - '.github/workflows/doc.yml'
   workflow_dispatch: # useful for testing tx pushes
-  workflow_call:
 
-permissions:
-  contents: write
 
 defaults:
   run:
@@ -37,12 +35,17 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python requirements
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Install Transifex client
         run: |
           curl -OL https://github.com/transifex/cli/releases/download/v1.6.10/tx-linux-amd64.tar.gz
           tar -xvzf tx-linux-amd64.tar.gz
+
+      - name: Extract translatable content from mkdocs.yml config
+        run: ./scripts/mkdocs_tx.py create_source
 
       - name: Configure Transifex
         run: scripts/transifex_utils.py
@@ -56,12 +59,20 @@ jobs:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
 
       - name: Pull translations from Transifex
-        if: ${{ github.event_name == 'push' || github.event.pull_request.head.repo.full_name == 'opengisch/QgisModelBaker' && github.actor != 'dependabot[bot]' }}
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event.pull_request.head.repo.full_name == 'opengisch/QgisModelBaker' && github.actor != 'dependabot[bot]' }}
         run: |
           ./tx pull --translations --all --minimum-perc 10
           ./tx status
         env:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
+
+      - name: Translate Mkdocs config
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event.pull_request.head.repo.full_name == 'opengisch/QgisModelBaker' && github.actor != 'dependabot[bot]' }}
+        run: |
+          ./scripts/mkdocs_tx.py -s fr update_config
+          ./scripts/mkdocs_tx_commit.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build documentation
         run: mkdocs build
