--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -58,7 +58,7 @@ jobs:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
 
       - name: Pull translations from Transifex
-        if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == 'opengisch/QgisModelBaker' && github.actor != 'dependabot[bot]' }}
+        if: contains(fromJSON('["push", "workflow_dispatch"]'), github.event_name) || ${{ github.event_name == 'pull_request' && github.repository == 'opengisch/QgisModelBaker' }}
         run: |
           ./tx pull --translations --all --minimum-perc 10
           ./tx status
@@ -66,7 +66,7 @@ jobs:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
 
       - name: Translate Mkdocs config
-        if: ${{ github.event_name != 'pull_request'  || github.event.pull_request.head.repo.full_name == 'opengisch/QgisModelBaker' && github.actor != 'dependabot[bot]' }}
+        if: contains(fromJSON('["push", "workflow_dispatch"]'), github.event_name) || ${{ github.event_name == 'pull_request' && github.repository == 'opengisch/QgisModelBaker' }}
         run: |
           ./scripts/mkdocs_tx.py -s en update_config
           ./scripts/mkdocs_tx_commit.sh
@@ -84,5 +84,5 @@ jobs:
           if-no-files-found: error
 
       - name: Deploy to GitHub Pages
-        if: ${{ github.event_name != 'pull_request' }}
+        if: contains(fromJSON('["push", "workflow_dispatch"]'), github.event_name)
         run: mkdocs gh-deploy --force
