--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -91,7 +91,7 @@ plugins:
             Basket and Dataset Handling: Dataset und Basket Handling
             OID Generator: OID Generator
             UsabILIty Hub: UsabILIty Hub
-            Overview: Overview
+            Overview: Übersicht
             Model Baker Integration: Model Baker Integration
             Technical Concept: Technisches Konzept
             Optimized Projects for Extended Models: Optimierte Projekte für erweiterte
