use same dockerfile content like in the model baker libery repo

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,15 +1,16 @@
 ARG QGIS_TEST_VERSION=latest
 FROM  qgis/qgis:${QGIS_TEST_VERSION}
-MAINTAINER Matthias Kuhn <matthias@opengis.ch>
-
-# remove QGIS apt repo to avoid signing key issues
-RUN add-apt-repository -r  https://qgis.org/ubuntu && \
-    add-apt-repository -r  https://qgis.org/ubuntu-ltr
 
 RUN apt-get update && \
     apt-get -y install openjdk-8-jre \
-    python3-pip \
     && rm -rf /var/lib/apt/lists/*
+
+# Useful only in 3.22 and 3.28: drop when not need anymore
+RUN apt-get update && apt-get -y install python3-pip python3-venv python3-pytest python3-wheel
+
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3 -m venv --system-site-packages $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 COPY ./requirements.txt /tmp/
 RUN pip3 install -r /tmp/requirements.txt
