--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -92,7 +92,7 @@ plugins:
             Repositories: Repositories
             Basket and Dataset Handling: Dataset und Basket Handling
             OID Generator: OID Generator
-            UsabILIty Hub: UsabILIty Hub
+            UsabILIty Toppings: UsabILIty Toppings
             Overview: Übersicht
             Model Baker Integration: Model Baker Integration
             Technical Concept: Technisches Konzept
