--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -75,10 +75,11 @@ plugins:
           default: true
           name: English
           site_name: QGIS Model Baker Documentation
-
+          site_description: Model Baker is a QGIS plugin to visualize, edit and manipulate INTERLIS data in QGIS.
         - locale: de
           name: Deutsch
           site_name: QGIS Model Baker Dokumentation
+          site_description: Model Baker ist ein QGIS Plugin, um INTERLIS Daten in QGIS zu visualisieren, bearbeiten und editieren.
           nav_translations:
             Home: Home
             User Guide: Benutzerhandbuch
@@ -94,7 +95,7 @@ plugins:
             OID Generator: OID Generator
             UsabILIty Toppings: UsabILIty Toppings
             Overview: Übersicht
-            Model Baker Integration: Model Baker Integration
+            Model Baker Integration: Model Baker InModel Baker is a QGIS plugin to visualize, edit and manipulate INTERLIS data in QGIStegration
             Technical Concept: Technisches Konzept
             Optimized Projects for Extended Models: Optimierte Projekte für erweiterte
               Modelle
@@ -115,6 +116,46 @@ plugins:
               toggle:
                 icon: material/weather-sunny
                 name: Wechsel zu Tagmodus
+                primary: white
+        - locale: fr
+          name: Français
+          site_name: Documentation de QGIS Model Baker
+          site_description: Model Baker est un plugin QGIS pour visualiser, traiter et éditer les données INTERLIS dans QGIS.
+          nav_translations:
+            Home: Accueil
+            User Guide: Guide de l'utilisateur
+            Get Started: Premiers pas
+            Model and Data Import Workflow: Flux de travail d'importation de modèles et de données
+            Export Data Workflow: Flux de travail d'exportation de données
+            Validate Data: Validation des données
+            Topping Exporter: Exportateur de Topping
+            Plugin Configuration: Configuration du plugin
+            Tipps & Tricks: Trucs et astuces
+            Repositories: Dépôts
+            Basket and Dataset Handling: Gestion des paniers (baskets) et des ensembles (datasets)
+            OID Generator: Générateur OID
+            UsabILIty Toppings: Toppings UsabILIty
+            Overview: Vue d'ensemble
+            Model Baker Integration: Intégration de Model Baker
+            Technical Concept: Concept technique
+            Optimized Projects for Extended Models: Projets optimisés pour les modèles étendus
+            Catalogues and their special cases: Catalogues et leurs cas particuliers
+            Meta Attributes: Méta-attributs
+            Migrate from ili2db 3 to 4: Migration de ili2db 3 vers 4
+            About: À propos
+            Development: Développement
+            Translation: Traduction
+          palette:
+            - scheme: default
+              primary: blue grey
+              toggle:
+                icon: material/weather-night
+                name: Passer en mode sombre
+            - scheme: slate
+              primary: blue grey
+              toggle:
+                icon: material/weather-sunny
+                name: Passer en mode clair
                 primary: white
 
         - locale: fr
