test ci test upload

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -47,15 +47,11 @@ jobs:
       - name: Package PyPI Packages
         run: |
           sudo ./scripts/package_pip_packages.sh
-      - name: Create Zip File
-        run: |
-          cd ${GITHUB_WORKSPACE}
-          zip -r QgisModelBaker_${{ github.event.pull_request.head.sha }}.zip QgisModelBaker
       - name: Upload Zip as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: QgisModelBaker_${{ github.event.pull_request.head.sha }}
-          path: QgisModelBaker_${{ github.event.pull_request.head.sha }}.zip
+          name: QgisModelBaker
+          path: QgisModelBaker
       - name: Get Artifact ID
         id: get-artifact-id
         uses: actions/github-script@v3
