test ci test upload

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -47,11 +47,16 @@ jobs:
       - name: Package PyPI Packages
         run: |
           sudo ./scripts/package_pip_packages.sh
-      - name: Upload Zip as Artifact
+      - name: Make dir
+        run: |
+          cd ${GITHUB_WORKSPACE}
+          mkdir QgisModelBaker_${{ github.event.pull_request.head.sha }}
+          mv -r QgisModelBaker  QgisModelBaker_${{ github.event.pull_request.head.sha }}/
+      - name: Upload as ZIP Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: QgisModelBaker
-          path: QgisModelBaker
+          name: QgisModelBaker_${{ github.event.pull_request.head.sha }}
+          path: QgisModelBaker_${{ github.event.pull_request.head.sha }}
       - name: Get Artifact ID
         id: get-artifact-id
         uses: actions/github-script@v3
