--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
       - Export Data Workflow: user_guide/export_workflow.md
       - Validate Data: user_guide/validation.md
       - Topping Exporter: user_guide/topping_exporter.md
+      - Quick Visualizer: user_guide/quick_visualizer.md
       - Plugin Configuration: user_guide/plugin_configuration.md
   - Tipps & Tricks:
       - Repositories: background_info/repositories.md
@@ -90,6 +91,7 @@ plugins:
             Export Data Workflow: Daten Export Workflow
             Validate Data: Daten Validierung
             Topping Exporter: Topping Exporter
+            Quick Visualizer: Quick Visualizer
             Plugin Configuration: Plugin Konfiguration
             Tipps & Tricks: Tipps & Tricks
             Repositories: Repositories
